syntax = "proto3";

package userservicepb;

option go_package = "userservicepb/";

import "google/protobuf/timestamp.proto";

service UserServiceGRPC {
  rpc GetAllUsers (GetAllUsersRequest) returns (GetAllUsersResponse);
  rpc GetUserById (GetUserByIdRequest) returns (GetUserByIdResponse);
}

message GetAllUsersRequest {}

message GetUserByIdRequest {
  string id = 1;
}

message GetAllUsersResponse {
  repeated User users = 1;
}

message GetUserByIdResponse {
  User user = 1;
}

message User {
  string id = 1;
  string full_name = 2;
  string email = 3;
  string username = 4;
  string address = 5;
  string role_name = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}